add configuration to postgresql

--- a/ApiRuleta/appsettings.Development.json
+++ b/ApiRuleta/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SqlServerConnection": {
+  "Connection": {
     "RuletaDB": "Server=localhost;Database=RuletaDB;User Id=sa;Password=Lisito01; TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
