--- a/ApiRuleta/appsettings.json
+++ b/ApiRuleta/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SqlServerConnection": {
-    "RuletaDB": "Server=localhost;Database=RuletaDB;User Id=sa;Password=Lisito01; TrustServerCertificate=true;"
+  "Connection": {
+    "RuletaDB": "Host=containers-us-west-187.railway.app;Port=7436;Database=railway;User Id=postgres;SSL Mode=Require;Trust Server Certificate=true;"
   },
   "AllowedHosts": "*"
 }
