Update connection string for postgreSQL

--- a/ApiRuleta/appsettings.json
+++ b/ApiRuleta/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Connection": {
+  "ConnectionStrings": {
     "RuletaDB": "Host=containers-us-west-187.railway.app;Port=7436;Database=railway;User Id=postgres;SSL Mode=Require;Trust Server Certificate=true;"
   },
   "AllowedHosts": "*"
